--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -18,7 +18,7 @@
   --color-text--alt: var(--color-primary);
 
   // global
-  --padding-main: 0 6.25vw;
+  --padding-main: 0 10vw;
 }
 
 html,
